--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
 </head>
 <body>
     <div id="container1">
-        <div id="a1" onclick="legtil(this)" class="box1"></div>
-        <div id="a2" onclick="legtil(this)" class="box2"></div>
-        <div id="a3" onclick="legtil(this)" class="box1"></div>
-        <div id="a4" onclick="legtil(this)" class="box2"></div>
-        <div id="a5" onclick="legtil(this)" class="box1"></div>
-        <div id="a6" onclick="legtil(this)" class="box2"></div>
-        <div id="a7" onclick="legtil(this)" class="box1"></div>
-        <div id="a8" onclick="legtil(this)" class="box2"></div>
-        <div id="a9" onclick="legtil(this)" class="box1"></div>
+        <div id="a1" onclick="leggtil(this)" class="box1"></div>
+        <div id="a2" onclick="leggtil(this)" class="box2"></div>
+        <div id="a3" onclick="leggtil(this)" class="box1"></div>
+        <div id="a4" onclick="leggtil(this)" class="box2"></div>
+        <div id="a5" onclick="leggtil(this)" class="box1"></div>
+        <div id="a6" onclick="leggtil(this)" class="box2"></div>
+        <div id="a7" onclick="leggtil(this)" class="box1"></div>
+        <div id="a8" onclick="leggtil(this)" class="box2"></div>
+        <div id="a9" onclick="leggtil(this)" class="box1"></div>
     </div>
     <div id="container2">
         <div id="b1" onclick="velgbilde(this)" class="box1">
@@ -87,10 +87,23 @@
                 console.log(valgt);
                 console.log(x.innerHTML);
             }
-            function legtil(_){
-                
+            function leggtil(_){
+                let bildesjekk = 0;
+                for(i = 1; i <= 9; i++){
+                    let x = "a"+ i;
+                    if(document.getElementById(x).innerHTML == document.getElementById(valgt).innerHTML){
+                        bildesjekk++;
+                    }
+                }
+                console.log(bildesjekk);
+                if(bildesjekk == 0){
+                _.innerHTML = document.getElementById(valgt).innerHTML;
+                }
             }
-            
+            //loop gjennom a1-9
+            //sammenlign innerHTML a[i] med valgt.blabla.innerHTML
+            //hvis a[i].innerHTML lik valgt.innerHTML så sett a[i].innerHTML = ''
+            //
         </script>
 </body>
 </html>
